--- a/app/user/conf/test/conf.yaml
+++ b/app/user/conf/test/conf.yaml
@@ -14,7 +14,7 @@ registry:
   password: ""
 
 mysql:
-  dsn: "root:Aa123456*@tcp(47.108.239.154:3406)/gomall?charset=utf8mb4&parseTime=True&loc=Local"
+  dsn: "root:Aa123456*@tcp(47.108.239.154:3406)/user?charset=utf8mb4&parseTime=True&loc=Local"
 
 redis:
   address: "127.0.0.1:6379"
