--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,15 +1,11 @@
 version: '3'
 services:
-  consul:
-    image: 'hashicorp/consul'
-    ports:
-      - 8500:8500
+  # consul:
+  #   image: 'hashicorp/consul'
+  #   ports:
+  #     - 8500:8500
 
-    
-  mysql:
-      image: "mysql:8.0.41"
-      ports:
-        - 3306:3306
-      environment:
-        - MYSQL_ROOT_PASSWORD=root
-        - MYSQL_DATABASE=gomall
+  redis:
+    image: "redis:latest"
+    ports:
+      - 6379:6379
