完善order模块业务逻辑，由于依赖关系生成了cart_api部分

--- a/app/api/Makefile
+++ b/app/api/Makefile
@@ -7,4 +7,7 @@ gen-api-auth:
 gen-api-user:
 	cwgo server --type HTTP --idl ../../idl/api/user_api.proto --service api --module Gomall/app/api -I ../../idl
 
+.PHONY: gen-api-order
+gen-api-order:
+	cwgo server --type HTTP --idl ../../idl/api/order_api.proto --service api --module Gomall/app/api -I ../../idl
 
