--- a/app/order/conf/dev/conf.yaml
+++ b/app/order/conf/dev/conf.yaml
@@ -14,7 +14,7 @@ registry:
   password: ""
 
 mysql:
-  dsn: "%s:%s@tcp(%s:3406)/%s?charset=utf8mb4&parseTime=True&loc=Local"
+  dsn: "root:Aa123456%2A@tcp(47.108.239.154:3406)/order?charset=utf8mb4&parseTime=True&loc=Local"
 
 redis:
   address: "127.0.0.1:6379"
