--- a/app/payment/.env
+++ b/app/payment/.env
@@ -1,4 +1,4 @@
 MYSQL_USER=root
-MYSQL_PASSWORD=Aa123456*
-MYSQL_HOST=47.108.239.154
+MYSQL_PASSWORD=password
+MYSQL_HOST=host_ip
 MYSQL_DATABASE=payment
